Fix for PDT+ bug 23085, Pressing enter in open web location dialog doesn't work if dialog is opened from keybinding but does work if opened from menu. Changed XUL keybinding executing to prevent reentrant execution of bindings. This dialog didn't work because it was modal and in the middle of waiting for the inital xulkey+L binding to finish when you hit enter, so we smacked our reentrancy guard and didn't execute the enter key binding.  r = hyatt